--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "google-calendar-clone",
+  "homepage": "https://jinwoo0103.github.io/google-calendar-clone",
   "name": "google-calendar-react",
   "version": "0.1.0",
   "private": true,
